enhancement(#126): added ReittiIntegration endpoints, User info